Flow UI: Checkboxes report wrong width, making layouts jump to multi-columns too soon #56659

Closed
opened 2018-09-02 16:02:20 +02:00 by William Reynish · 3 comments

When creating a Flow UI block which only contain checkboxes, the layout goes to multi-column too soon, because the checkboxes report a wrong width, making text impossible to read.

I used:
flow = layout.grid_flow(row_major=True, columns=0, even_columns=True, even_rows=False, align=False).

Here you can see the layout engine jumps to four columns, even though there actually isn't space yet:

Screen_Shot_2018-09-02_at_00.45.27.png

I have to make the panel this narrow for it to jump to a single column, but then text isn't readable.

Screen_Shot_2018-09-02_at_00.45.34.png

Replace properties_render.py with this one to see the updated layout with the Flow UI example in Render -> Output.
properties_render.py

When creating a Flow UI block which only contain checkboxes, the layout goes to multi-column too soon, because the checkboxes report a wrong width, making text impossible to read. I used: *flow = layout.grid_flow(row_major=True, columns=0, even_columns=True, even_rows=False, align=False)*. Here you can see the layout engine jumps to four columns, even though there actually isn't space yet: ![Screen_Shot_2018-09-02_at_00.45.27.png](https://archive.blender.org/developer/F4527138/Screen_Shot_2018-09-02_at_00.45.27.png) I have to make the panel this narrow for it to jump to a single column, but then text isn't readable. ![Screen_Shot_2018-09-02_at_00.45.34.png](https://archive.blender.org/developer/F4527140/Screen_Shot_2018-09-02_at_00.45.34.png) Replace properties_render.py with this one to see the updated layout with the Flow UI example in Render -> Output. [properties_render.py](https://archive.blender.org/developer/F4522480/properties_render.py)
Bastien Montagne was assigned by William Reynish 2018-09-02 16:02:20 +02:00

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

This issue was referenced by cc03218962

This issue was referenced by cc0321896210656ae3731aa44ca896437288d580

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56659
No description provided.