Fix T56659: Flow UI: Checkboxes report wrong width, making layouts jump to multi-columns too soon.

Wrong handling of ideal width when splitting buttons and labels appart
for checkboxes...